# cs100-final-project

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Diary.cpp  Diary.h  PasswordRecovery.cpp  PasswordRecovery.h  README.md  Recc.cpp  Recc.h  Song.cpp  Song.h  SongCollection.cpp  SongCollection.h  Sort.cpp  UserApplication.cpp  UserApplication.h  UserAuthentication.cpp  UserAuthentication.h  UserLogin.cpp  UserLoginStorage.txt  UserLoginTesting.cpp  UserMenu.h  UserProfile.cpp  UserProfile.h  UserStorage.cpp  UserStorage.h  askForUserLogin.cpp  askForUserLogin.h  diary.txt  diary_ILoveMusic.txt  diary_ILoveThisProject.txt  diary_deez.txt  diary_hi.txt  example1  googleTest  main.cpp  ratings.cpp  ratings.h  recc.txt  (+2 more)
header/: Diary.h  PasswordRecovery.h  Recc.h  Song.h  SongCollection.h  Sort.h  UserApplication.h  UserAuthentication.h  UserLogin.h  UserStorage.h  askForUserLogin.h  ratings.h
src/: .gitignore  Diary.cpp  PasswordRecovery.cpp  Recc.cpp  Song.cpp  SongCollection.cpp  Sort.cpp  UserApplication.cpp  UserAuthentication.cpp  UserLogin.cpp  UserLoginTesting.cpp  UserProfile.cpp  UserStorage.cpp  askForUserLogin.cpp  main.cpp  ratings.cpp
